# Web-hw-9

./: Dockerfile  README.md  app.py  check_sent.py  docker-compose.yml  pyproject.toml  redis_cache.py  requirements.txt  search_quotes.py  seed_data.py  send_test_message.py
consumer_email/: Dockerfile  consumer_email.py
consumer_sms/: Dockerfile  consumer_sms.py  requirements.txt
consumer_sms/db/: models.py
db/: models.py
producer/: Dockerfile  producer.py
scrapy_scraper/: authors.json  load_to_mongo.py  main.py  scrapy.cfg
scrapy_scraper/quotes_scraper/: settings.py
scrapy_scraper/quotes_scraper/spiders/: quotes_spider.py
