[project]
name = "web-hw-08"
version = "0.1.0"
description = ""
authors = [
    {name = "Your-Natka", email = "140067844+Your-Natka@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "mongoengine >=0.29.1,<0.30.0",
    "flask >=3.1.1,<4.0.0",
    "pymongo >=4.13.2,<5.0.0",
    "pika (>=1.3.2,<2.0.0)",
    "faker (>=37.5.3,<38.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
